syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "UserServiceProto";

import "global.proto";

package pb;

service ProjectService {
  rpc Add(Project) returns (Project) {}
  rpc Get(Id) returns (Project) {}
  rpc Del(Id) returns (Project) {}
  rpc Update(Project) returns (Project) {}
  rpc GetAll(ListProject) returns (ProjectResponse) {}
}

message Project {
  string id = 1;
  string description = 2;
  string client = 3;
  string tags = 5;
  string status = 6;
  string team = 11;
}

message ListProject {
}

message ProjectResponse {
    repeated Project Projects = 1;
}